# pydantic-file-secrets

./: .bumpversion.toml  .copier-answers.yml  .editorconfig  .gitignore  .ruff.toml  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  Taskfile.yml  compose.yaml  compose.yml  docsubfile.py  pyproject.toml  tox.ini
.dev/: Brewfile  Dockerfile  alacritty.sh  alacritty.toml  compose.yaml  requirements.dev.txt  terminal.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.jist/: LICENSE  README.md  gh.just  git.just  op.just  scriv.just  version.just
.just/: changelog.just  gh.just  git.just
NEWS.d/: .new_fragment.md.j2  20250226_225314_makukha_31_update_dev_pipeline.md  20250227_082443_makukha_32_use_dirlay_for_tests.md  20250304_215521_makukha_35_use_copier_project_template.md  20250306_155715_makukha_30_typing_for_filesecretssettingssource.md  20250421_121036_m.makukha_41_importerror_cannot_import_name_settingserror_from_pydantic_settingssources.md  20250524_201015_m.makukha_45_release_v044.md  20250621_173028_m.makukha_49_support_pydantic_settings_v210.md
docs/: badges.md  features.md  usage.md
docs/openssf/: bestpractices.md
src/pydantic_file_secrets/: __init__.py  __version__.py  customise.py  types.py
tests/: conftest.py  requirements.txt  sample.py  test_compatibility.py  test_dropin_compatibility.py  test_file_secrets.py  test_ignored_options.py  test_internal.py  test_motivation.py  test_original_source.py  test_plain.py  test_prefix.py  test_pydantic.py  test_pydantic_motivation.py  test_pydantic_source.py  test_secrets_dir.py  test_secrets_dir_list.py  test_settings_args.py  test_strip_whitespace.py  test_subdir.py  test_symlink.py  test_unimportant.py  test_usage.py
tests/usage/: multiple.py  nested.py  plain.py  sugar.py
