[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-file-secrets"
description = "Use file secrets in nested Pydantic Settings models, drop-in replacement for SecretsSettingsSource."
authors = [
    {name = "Michael Makukha", email = "m.makukha@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "python", "python3",
    "pydantic", "pydantic-v2", "pydantic-settings",
    "settings", "configuration", "config", "validation",
    "secrets", "docker-secret", "docker", "file-secrets",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Typing :: Typed",
    # see https://pypi.org/classifiers/
]
dynamic = ["version"]

requires-python = ">=3.8"
dependencies = [
    "pydantic-settings>=2.2",
]

[project.urls]
Documentation = "https://github.com/makukha/pydantic-file-secrets#readme"
Changelog = "https://github.com/makukha/pydantic-file-secrets/releases"
Issues = "https://github.com/makukha/pydantic-file-secrets/issues"
Source = "https://github.com/makukha/pydantic-file-secrets"

[dependency-groups]
dev = [
  "bump-my-version>=0.32 ; python_version >= '3.12'",
  "docsub>=0.9 ; python_version >= '3.12'",
  "genbadge[tests,coverage]>=1.1 ; python_version >= '3.12'",
  "mypy>=1.15 ; python_version >= '3.12'",
  "ruff>=0.9 ; python_version >= '3.12'",
  "scriv>=1.5 ; python_version >= '3.12'",
]
testing = [
  "mypy>=1.4",  # last minor version supporting Python 3.7
  "pytest>=8.3 ; python_version ~= '3.13'",
  "pytest-cov>=6.0 ; python_version ~= '3.13'",
  "pytest-sugar>=1.0 ; python_version ~= '3.13'",
]

# bump-my-version

[tool.bumpversion]
current_version = "0.4.1"
allow_dirty = true
files = [
  {filename = "docs/badges.md"},
  {filename = "src/pydantic_file_secrets/__version__.py"},
]

# hatch

[tool.hatch.build]
exclude = [
  ".jist",
  "Justfile",
  "Makefile",
  "compose.yml",
]
[tool.hatch.version]
path = "src/pydantic_file_secrets/__version__.py"

# ruff

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # unused function args (fixtures)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# scriv

[tool.scriv]
categories = ["Security ⚠️", "Breaking 🔥", "Removed 💨", "Deprecated ❄️", "Added 🌿", "Changed", "Fixed", "Docs", "Misc"]
entry_title_template = "[{{ version }}](https://github.com/makukha.pydantic-file-secrets/releases/tag/v{{ version }}) — {{ date.strftime('%Y-%m-%d') }}"
ghrel_template = "command: just gh-issue-title"  # abuse config option to pass default message
format = "md"
fragment_directory = "NEWS.d"
md_header_level = "2"
new_fragment_template = "file: NEWS.d/.new_fragment.md.j2"
version = "command: just version"
